# SourceLua

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.circleci/: config.yml
cmake/Modules/: luajit.cmake  source_sdk.cmake
container/: Dockerfile
patches/: source-sdk-2013.patch
src/: CMakeLists.txt  info.hpp  main.cpp
src/common/: logging.hpp  luajit.hpp  source.hpp  type_traits.hpp  version.hpp
src/lua/: error_handler.cpp  error_handler.hpp  event.cpp  event.hpp  lua.cpp  lua.hpp  scheduler.cpp  scheduler.hpp  script.cpp  script.hpp
src/lua/libraries/: console.cpp  console.hpp  event.cpp  event.hpp  thread.cpp  thread.hpp
src/lua/objects/: common.hpp  edict.cpp  edict.hpp  event.cpp  event.hpp  game_event.cpp
src/plugin/: plugin.commands.cpp  plugin.cpp  plugin.cvars.cpp  plugin.events.cpp  plugin.hpp
src/source/: _fixes.hpp  edict.hpp  eiface.hpp  igameevents.hpp  iserver.hpp
src/source/engine/: iserverplugin.hpp
src/source/tier0/: dbg.hpp
src/source/tier1/: convar.hpp  interface.hpp  tier1.hpp
src/source/tier2/: tier2.hpp
src/thread/: scheduler.cpp  scheduler.hpp  task.cpp  task.hpp
util/: g++-m32.sh  gcc-m32.sh  sourcelua.vdf
